# SimpleDocQA

./: .gitignore  DocQA.slnx  README.md
DocQA.Agent/: .env.example  conftest.py  main.py  pyproject.toml
DocQA.Agent/app/agent/: graph.py
DocQA.Agent/app/core/: config.py
DocQA.Agent/app/tools/: query_docs.py
DocQA.Agent/tests/: test_agent.py
DocQA.Ingestion/: Chunker.cs  DocQA.Ingestion.csproj  Eval.cs  Program.cs  README.md  eval-set.json
DocQA.QueryService/: .env.example  conftest.py  experiments.py  pyproject.toml
DocQA.QueryService/app/: main.py
DocQA.QueryService/app/core/: azure_clients.py  config.py
DocQA.QueryService/app/models/: schemas.py
DocQA.QueryService/app/services/: generation.py  retrieval.py
DocQA.QueryService/tests/: test_api.py
